src/objects/Win_Pnote_Import__c.object
<CustomObject>
    <description>Table used to pull in patient notes from Windent</description>
    <fields>
        <fullName>Account_ID__c</fullName>
        <label>Account_ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_Note__c</fullName>
        <label>Patient Note</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Row_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Row Processed</label>
        <type>Checkbox</type>
    </fields>
    <label>Win Pnote Import</label>
    <nameField>
        <displayFormat>WPIN-{0000}</displayFormat>
        <label>Win Pnote Import Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Win Pnotes Import</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>